# removing_pdf_clipboard_newlines

./: .gitignore  LICENSE  README.md
c++/: README.md  SConstruct  main.cpp
ocaml/: README.md  dune-project
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/: pdf_copypaste.dune-package  pdf_copypaste.install  pdf_copypaste.opam
ocaml/_build/default/.dune/: configurator  configurator.v2
ocaml/_build/default/lib/: pdf_copypaste.cma  pdf_copypaste.cmxa  pdf_copypaste.cmxs
ocaml/_build/default/lib/.formatted/: dune
ocaml/_build/default/lib/.merlin-conf/: lib-pdf_copypaste
ocaml/_build/default/lib/.pdf_copypaste.objs/byte/: pdf_copypaste.cmi  pdf_copypaste.cmo  pdf_copypaste.cmt
ocaml/_build/default/lib/.pdf_copypaste.objs/native/: pdf_copypaste.cmx
ocaml/_build/default/test/.merlin-conf/: exe-pdf_copypaste
ocaml/_build/default/test/.pdf_copypaste.eobjs/byte/: dune__exe__Pdf_copypaste.cmi  dune__exe__Pdf_copypaste.cmti
ocaml/_build/default/test/.pdf_copypaste.eobjs/native/: dune__exe__Pdf_copypaste.cmx
ocaml/_build/install/default/doc/pdf_copypaste/: README.md
ocaml/test/: dune
python/: main.py  test.txt
rust/: Cargo.toml
rust/src/: main.rs
scala/: .scalafmt.conf  build.sbt
scala/src/main/scala/: Main.scala
