(lang dune 3.7)

(name pdf_copypaste)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anji")

(maintainers "Anji")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name pdf_copypaste)
 (synopsis "Remove PDF newlines")
 (description "A utility to remove '\n's from clipboard buffer when trying to copy text from a PDF document")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
